# mwp2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS.md  GPT5_Plan.md  GPT5_Refactor_Plan.md  Makefile  PROJECT.md  README.md  asset_list.txt  basics.md  codex_technical_overview.md  codex_technical_progress.md  collect.sh  dumper.py  pyproject.toml  pytest.ini  start.md  stock_collector.py
.github/workflows/: ci.yml
conf/: config.yaml
conf/data/: default_data_config.yaml
conf/model/: tft_default.yaml
conf/model/loss/: directional.yaml  hybrid.yaml  quantile.yaml
conf/trainer/: default_trainer.yaml
data/processed/: industry_map.parquet  processed_data.parquet  ticker_map.parquet
outputs/2025-05-28/09-54-37/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-28/09-55-40/.hydra/: hydra.yaml
scripts/: audit_outliers.py  clean_targets.py  filter_universe.py  rolling_cv.py  tscv.py  winsorize_targets.py
src/market_prediction_workbench/: analyze_preds.py  calibration.py  data.py  evaluate.py  losses.py  model.py  sampling.py  train.py
tests/: conftest.py  test_audit_coverage.py  test_data.py  test_model.py  test_sampling_and_training.py
