[project]
name = "market_prediction_workbench"
version = "0.1.0"
description = "Market Prediction Workbench"
authors = [
    {name = "rolandpolczer",email = "mail@rolandpolczer.de"}
]
license = {text = "Proprietary"}
readme = "README.md"
packages = [{include = "market_prediction_workbench", from = "src"}]
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.11"
polars = "^1.3.0"
numpy = "^2.2.6"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
[tool.poetry.dependencies]
torch = {version = "^2.5.1", source = "pytorch_cuda"}

[tool.ruff]
ignore = ["F841"]
